fix footer issue on small screens

--- a/css/site.css
+++ b/css/site.css
@@ -10,6 +10,7 @@
 body {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 1.5em;
+    /* font-size: 5.4vw; */
     color:#13294b;
 }
 
@@ -140,3 +141,9 @@ div.gameLink a:hover {
     color: #ffc72c;
     background-color: #003da5;
   }
+
+  @media only screen and (max-width: 1270px) {
+    footer {
+       font-size: .5em;
+    }
+ }
